--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,10 +27,7 @@ require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelpe
 flutter_ios_podfile_setup
 
 target 'Runner' do
-  # Keep static linking unless a pod explicitly requires frameworks.
-  # If a pod needs frameworks, uncomment:
-  # use_frameworks! :linkage => :static
-
+  # use_frameworks! :linkage => :static   # keep commented unless a pod requires it
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
